fixed radio button misalignment

--- a/css/index.css
+++ b/css/index.css
@@ -643,6 +643,9 @@ h1 {
     width: 100%;
   }
 }
+.contact .form-btn .form-btn:hover {
+  background-color: #5E9FB9;
+}
 .contact .form-group {
   margin-top: 30px;
 }
@@ -679,6 +682,9 @@ h1 {
 }
 .contact .form-group input.num-build {
   height: 40px;
+}
+.contact .form-check-input {
+  position: relative;
 }
 .contact .addresses {
   margin-top: 10px;
