--- a/less/contact.less
+++ b/less/contact.less
@@ -52,6 +52,10 @@
       width: 100%; 
     }
 
+    .form-btn:hover {
+      background-color: @tab-sel;
+    }
+
   }
 
   .form-group {
@@ -94,6 +98,10 @@
     input.num-build {
       height: 40px;
     }
+  }
+
+  .form-check-input{
+    position:relative;
   }
 
   .addresses {
